# yield-aggregator

./: .gitignore  Anchor.toml  flake.nix  package.json  test-wallet.json  tsconfig.json
docs/: migration.md  specification.md
programs/yield-aggregator/: Cargo.toml
programs/yield-aggregator/src/: lib.rs
programs/yield-aggregator/src/instructions/: admin.rs  deposit.rs  mod.rs  rebalance.rs
programs/yield-aggregator/src/state/: mod.rs
tests/: yield_aggregator.ts
